--- a/fansite.css
+++ b/fansite.css
@@ -291,6 +291,253 @@ header a {
 
 /* Fin de la mise en forme de Actus */
 
+/* Début de la mise en forme de Histoire */
+
+/* DEBUT HISTOIRE PAGE 1 - DK */
+
+#histoire #dk {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: black;
+  height: 100vh;
+  font-family: "Ubuntu Mono", cursive;
+  font-size: 20px;
+}
+
+#histoire #dkgauche {
+  background-color: black;
+  display: flex;
+  width: 0;
+  margin-left: 10px;
+}
+
+#histoire #dkdroite {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin: 0;
+  width: 70%;
+  height: 100%;
+  background-color: #ffffff;
+  clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
+  background: linear-gradient(
+    353deg,
+    rgba(250, 250, 250, 0) 0%,
+    rgba(235, 234, 234, 1) 0%,
+    rgba(255, 255, 255, 1) 74%
+  );
+}
+
+#histoire #dkpartie1,
+#dkpartie2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#histoire #dkimg {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 80%;
+  margin-top: 5%;
+}
+
+#histoire #dkpartie1 {
+  width: 70%;
+  margin-top: 30px;
+  margin-right: 10px;
+  margin-left: 30px;
+}
+
+#histoire #dkpartie2 {
+  width: 80%;
+  margin-right: 15px;
+  margin-left: 40px;
+  margin-top: 30px;
+  align-items: center;
+}
+
+#histoire #imgarcade {
+  height: 300px;
+}
+
+#histoire #imgdk,
+#imglogodk {
+  height: 225px;
+}
+
+#histoire #flechehistoire {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+/* FIN PAGE 1 - DK */
+
+/* DEBUT PAGE 2 - CONSOLE */
+
+#console {
+  font-family: "Ubuntu Mono", cursive;
+  text-shadow: 1px 2px 3px #ffffff;
+  font-size: 20px;
+}
+
+#console #consolehaut {
+  background-image: url(img/histoire/niveau1-1.gif);
+}
+
+#console #consolebas,
+#flecheconsole {
+  background-image: url(img/histoire/niveau1-2.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+}
+
+#console #consolehaut,
+#consolebas {
+  height: 49vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+}
+
+#console #consolebasgauche,
+#consolebasdroite {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 50%;
+}
+
+#console #consolebasdroite {
+  margin-left: 15px;
+}
+
+#console #imgconsolenes,
+#imgnesgame {
+  height: 300px;
+}
+
+#console #txtconsole1 {
+  margin-right: 30px;
+}
+
+#console #txtconsole2,
+#txtconsole3 {
+  color: #ffffff;
+}
+
+#console #imgcoin,
+#imgstar {
+  height: 200px;
+}
+
+#console #flecheconsole {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+/* FIN PAGE 2 - CONSOLE */
+
+/* DEBUT PAGE 3 - EVOLUTION */
+
+#evolution {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-image: url(img/histoire/backgroundevolution.jpg);
+  background-size: cover;
+  font-family: "Ubuntu Mono", cursive;
+  font-size: 20px;
+}
+
+#evolution #evolutionhaut,
+#evolutionmilieu,
+#evolutionbas {
+  display: flex;
+  flex-direction: row;
+  color: #ffffff;
+  width: 80%;
+}
+
+#evolution #mario64,
+#mariogalaxy,
+#marioodyssey {
+  height: 300px;
+}
+
+#evolution #evolutionhaut {
+  align-self: flex-end;
+  margin-top: 15px;
+  margin-right: 15px;
+}
+
+#evolution #evolutionbas {
+  margin: 0;
+  align-self: flex-start;
+}
+
+#evolution #evolutionmilieu {
+  align-self: flex-end;
+}
+
+#evolution #txtetfleche {
+  position: relative;
+}
+
+#evolution #flecheevolution {
+  position: absolute;
+  bottom: 0;
+  right: 40%;
+}
+
+/* FIN PAGE 3 - EVOLUTION */
+
+/* DEBUT PAGE 4 - OTHER */
+
+#othergames {
+  height: 100vh;
+  font-family: "Ubuntu Mono", cursive;
+  font-size: 22px;
+  text-shadow: 1px 2px 3px #ffffff;
+}
+
+#background {
+  height: 100%;
+  width: 100%;
+  background-image: url(img/histoire/backgroundother.PNG);
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#othergameshaut,
+#othergamesbas {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#othertxt {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+  text-align: justify;
+}
+
+/* Fin de la mise en forme de Histoire */
+
 /* Mise en forme de Contact */
 
 #body_contact {
