--- a/fansite.css
+++ b/fansite.css
@@ -453,15 +453,53 @@ header a {
   background-image: url(img/liens/backgroundactus.jpg);
   background-size: contain;
   background-repeat: repeat;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #main_liens {
   height: 100%;
   display: grid;
-  grid-template-columns: 30% 30% 30%;
-  grid-template-rows: 600px 600px;
-  column-gap: 30px;
-  row-gap: 30px;
+  justify-content: space-between;
+  align-items: center;
+  grid-template-columns: 380px 380px 380px;
+  grid-template-rows: 450px 450px;
+  column-gap: 40px;
+  row-gap: 100px;
+  margin: 80px 0px;
+}
+
+#main_liens section {
+  background-color: #ffffffe8;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  padding: 30px;
+  border-radius: 10px;
+}
+
+#main_liens section img {
+  border-radius: 10px;
+  transition: 400ms ease-in-out;
+}
+
+#main_liens section img:hover {
+  transform: scale(1.1);
+}
+
+#main_liens section h1 {
+  font-family: "Press Start 2P", cursive;
+  font-size: 16px;
+  margin-top: 30px;
+}
+
+#main_liens section p {
+  font-size: 20px;
+  font-family: "Ubuntu Mono", cursive;
+  text-align: justify;
 }
 
 /* Fin de la mise en forme de Liens externes */
